--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     # 環境変数
     environment:
       - N8N_LOG_LEVEL=debug
+      - NODE_FUNCTION_ALLOW_BUILTIN=*
       - NODE_FUNCTION_ALLOW_EXTERNAL=*
       - DB_TYPE=postgresdb
       - DB_POSTGRESDB_HOST=postgres
@@ -34,7 +35,7 @@ services:
     # user: "1000:1000"
     extra_hosts:
       - "host.docker.internal:host-gateway"
-
+  # Postgresのコンテナがホストマシンのボリュームを読み書きする時に権限の不一致等のエラーが出るのを回避するためにchownを実行するための一時的なコンテナ
   postgres-init:
     image: postgres:16
     volumes:
