--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,7 @@ events {
     worker_connections  4096;
 }
 http {
+    client_max_body_size 100m;
     map $http_upgrade $connection_upgrade {
         default upgrade;
         ''      close;
