--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ POSTGRES_PASSWORD=example_root_password
 POSTGRES_DB=n8n
 POSTGRES_NON_ROOT_USER=example_user
 POSTGRES_NON_ROOT_PASSWORD=example_password
+GENERIC_TIMEZONE=Asia/Tokyo
+SSL_EMAIL=example@example.com
