--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,19 @@ services:
         N8N_VERSION: 1.29.1
     ports:
       - 5678:5678
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.app.rule=Host(`${N8N_HOST}`)
+      - traefik.http.routers.app.entrypoints=websecure
+      - traefik.http.routers.app.tls.certresolver=mytlschallenge
+      - traefik.http.routers.app.tls=true
+      - traefik.http.middlewares.limit.buffering.maxRequestBodyBytes=100000000
+      - traefik.backend.buffering.maxRequestBodyBytes=128000000
     # 環境変数
     environment:
+      - N8N_PROTOCOL=https
       - N8N_LOG_LEVEL=debug
+      - N8N_PAYLOAD_SIZE_MAX=100
       - NODE_FUNCTION_ALLOW_BUILTIN=*
       - NODE_FUNCTION_ALLOW_EXTERNAL=*
       - DB_TYPE=postgresdb
@@ -24,6 +34,7 @@ services:
       - N8N_EDITOR_BASE_URL
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
+      - GENERIC_TIMEZONE
     tty: true
     volumes:
       - ./.n8n:/home/node/.n8n
@@ -67,12 +78,29 @@ services:
       interval: 5s
       timeout: 5s
       retries: 10
-  reverse-proxy:
-    image: nginx
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+  traefik:
+    image: 'traefik'
+    command:
+      - --log.level=DEBUG
+      - --api=true
+      - --api.insecure=true
+        #      - '--api.dashboard=true'
+      - --providers.docker=true
+      - --providers.docker.exposedbydefault=false
+      - --entrypoints.web.address=:80
+      - --entrypoints.web.http.redirections.entryPoint.to=websecure
+      - --entrypoints.web.http.redirections.entryPoint.scheme=https
+      - --entrypoints.web.http.redirections.entrypoint.permanent=true
+      - --entrypoints.websecure.address=:443
+      - --certificatesresolvers.mytlschallenge.acme.tlschallenge=true
+      - --certificatesresolvers.mytlschallenge.acme.email=${SSL_EMAIL}
+      - --certificatesresolvers.mytlschallenge.acme.storage=/letsencrypt/acme.json
     ports:
+      - 443:443
       - 80:80
+    volumes:
+      - ./traefik/letsencrypt:/letsencrypt
+      - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       app:
         condition: service_started
